# 23-1-projeto-sql-an-api-is-born

./: README.md  crud.py  database.py  models.py  pyproject.toml  schemas.py
Projeto_SQL/: avaliacoes.json  cria_banco.sql  filmes.json  main.py
Projeto_SQL/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
Projeto_SQL/sql_app/__pycache__/: crud.cpython-311.pyc.2716113826400
tutorial/: main.py
